# assignment

./: .gitignore  README.md  db_schema.sql  main.py  pyproject.toml  requirements.txt
notebooks/: Data_cleaning.ipynb  EDA_dataset.ipynb
